--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             left: -22px;
             width: 160px; /* 40px * 4 = 160px */
             height: 160px; /* 40px * 4 = 160px */
-            background: url('https://smkovalentbagx.vercel.app//gif1.gif') center/cover no-repeat;
+            background: url('https://smkovalentbagx.vercel.app/gif1.gif') center/cover no-repeat;
             border-radius: 50%;
 			padding-top:"255px";
         }
@@ -95,7 +95,7 @@
             position: absolute;
             width: 165px; /* Boyutları ayarlayın */
             height: 160px;
-            background: url('https://smkovalentbagx.vercel.app//gif1.gif') center/cover no-repeat; /* gif2'nin arka planı */
+            background: url('https://smkovalentbagx.vercel.app/gif1.gif') center/cover no-repeat; /* gif2'nin arka planı */
             border-radius: 50%;
             z-index: 9999; /* En üstte görünmesi için z-index ayarlandı */
             left: calc(50% - 750px); /* 750px'ye 100px eklenerek kaydırıldı */
