--- a/index2.html
+++ b/index2.html
@@ -45,8 +45,8 @@
 <body>
 
 <div class="container">
-    <img id="gif2" class="atom" src="https://smkovalentbagx.vercel.app/gif2.gif'">
-    <img id="gif1" class="atom" src="https://smkovalentbagx.vercel.app/gif1.gif'">
+    <img id="gif2" class="atom" src="https://smkovalentbagx.vercel.app/gif2.gif">
+    <img id="gif1" class="atom" src="https://smkovalentbagx.vercel.app/gif1.gif">
 </div>
 
 <script>
