--- a/index4.html
+++ b/index4.html
@@ -85,7 +85,7 @@
             left: -22px;
             width: 160px; /* 40px * 4 = 160px */
             height: 160px; /* 40px * 4 = 160px */
-            background: url('gif1.gif') center/cover no-repeat;
+            background: url("https://smkovalentbagx.vercel.app/gif1.gif") center/cover no-repeat;
             border-radius: 50%;
 			padding-top:"255px";
         }
@@ -95,7 +95,7 @@
             position: absolute;
             width: 165px; /* Boyutları ayarlayın */
             height: 160px;
-            background: url('gif2.gif') center/cover no-repeat; /* gif2'nin arka planı */
+            background: url("https://smkovalentbagx.vercel.app/gif1.gif") center/cover no-repeat; /* gif2'nin arka planı */
             border-radius: 50%;
             z-index: 9999; /* En üstte görünmesi için z-index ayarlandı */
             left: calc(50% - 750px); /* 750px'ye 100px eklenerek kaydırıldı */
@@ -213,11 +213,13 @@
         gif2.style.height = "165px"; 
 gif2.style.width = "165x";  
 
-gif2.style.backgroundImage = "url('gif2.gif";
+gif2.style.backgroundImage = "url('https://smkovalentbagx.vercel.app/gif2.gif";
+
+
 
 
         } else {
-            gif2.style.backgroundImage = "url('gif2.gif')"; // orijinal gif2Position        
+            gif2.style.backgroundImage = "url('https://smkovalentbagx.vercel.app/gif1.gif')"; // orijinal gif2Position        
 	        gif2.style.height = "165px"; 
 gif2.style.width = "165px"; 
         }
